--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Intuji-Weather</title>
+    <link rel="icon" type="image/svg+xml" href="clear.svg" />
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -11,27 +12,29 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      rel="stylesheet"
-    />
+    <script
+      src="https://kit.fontawesome.com/945fb9bd69.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body onload="getInitialWeather()">
     <main>
       <div class="weather">
-        <div class="search-box">
-          <i class="bx bxs-map"></i>
+        <form class="search-box" autocomplete="off">
+          <i class="fa-solid fa-location-dot"></i>
           <input
             type="text"
             placeholder="Enter Your Location"
-            class="search-input"
+            id="search__input"
           />
-          <button
-            class="bx bx-search search-icon"
-            style="background: none; border: none"
-          ></button>
+          <button class="button" onclick="searchData(event)">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </button>
+        </form>
+        <div class="heading">
+          <h4 class="location-name">Kathmandu</h4>
+          <span id="country">NP</span>
         </div>
-        <h4 class="location-name">Kathmandu</h4>
         <figure class="weather-image">
           <img src="clear.svg" alt="" class="weather-icon" />
           <figcaption class="weather-info">
@@ -41,28 +44,28 @@
         </figure>
         <div class="weather-details">
           <div class="content">
-            <i class="bx bxs-sun bx-md"></i>
-            <div class="sunrise-content">
+            <i class="fa-solid fa-temperature-three-quarters"></i>
+            <div class="min-content">
               <p></p>
-              <div><p>Sunrise</p></div>
+              <div><p>Min Temp</p></div>
             </div>
           </div>
           <div class="content">
-            <i class="bx bx-sun bx-md"></i>
-            <div class="sunset-content">
+            <i class="fa-solid fa-temperature-three-quarters"></i>
+            <div class="max-content">
               <p></p>
-              <div><p>Sunset</p></div>
+              <div><p>Max Temp</p></div>
             </div>
           </div>
           <div class="content">
-            <i class="bx bx-water bx-md"></i>
+            <i class="fa-solid fa-water"></i>
             <div class="humidity-content">
               <p></p>
               <div><p>Humidity</p></div>
             </div>
           </div>
           <div class="content">
-            <i class="bx bx-wind bx-md"></i>
+            <i class="fa-solid fa-wind"></i>
             <div class="wind-content">
               <p></p>
               <div><p>Wind Speed</p></div>
